--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "@sparticuz/chromium": "^126.0.0",
     "express": "^4.19.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
-    "puppeteer": "^23.11.1",
+    "puppeteer-core": "^23.11.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
